--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,5 +1,6 @@
 // $primary-color: #2985d8;
-$primary-color: #855133;
+// $primary-color: #855133;
+$primary-color: #d47d6b;
 $gray-color: #716f6f;
 $light-gray-color: #cacaca;
 $dark-color: #434343;
