--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,6 +1,8 @@
 // $primary-color: #2985d8;
-// $primary-color: #855133;
-$primary-color: #d47d6b;
+$primary-color: #855133;
+// $primary-color: #d47d6b;
+// $primary-color: #a0144f;
+// $primary-color: green;
 $gray-color: #716f6f;
 $light-gray-color: #cacaca;
 $dark-color: #434343;
