--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,9 +1,9 @@
 .highlight {
-  color: #d47d6b;
+  color: #855133;
 }
 
 .underline {
-  border-bottom: 3px solid #d47d6b;
+  border-bottom: 3px solid #855133;
   padding-bottom: 0.5rem;
 }
 
@@ -13,14 +13,14 @@
 }
 
 .nav-item .active {
-  color: #d47d6b !important;
+  color: #855133 !important;
 }
 
 .btn-primary, #projects-section .nav-item .active {
   color: #ffffff !important;
   border-radius: 0;
-  background-color: #d47d6b;
-  border-color: #d47d6b;
+  background-color: #855133;
+  border-color: #855133;
   text-decoration: none;
   font-weight: bold;
   padding: 10px 20px !important;
@@ -43,7 +43,7 @@
 }
 
 .carousel-caption h5 {
-  color: #d47d6b;
+  color: #855133;
 }
 
 .carousel-caption p {
@@ -60,13 +60,13 @@
 }
 
 .service-icon {
-  border-bottom: 5px solid #d47d6b;
+  border-bottom: 5px solid #855133;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
 }
 
 .service:hover {
-  background-color: #d47d6b;
+  background-color: #855133;
   text-align: center;
   color: #ffffff;
 }
@@ -76,7 +76,7 @@
 }
 
 .make-appointment {
-  background-color: #d47d6b;
+  background-color: #855133;
 }
 
 .make-appointment h5 {
@@ -159,7 +159,7 @@
 }
 
 #footer-upper a:hover {
-  color: #d47d6b;
+  color: #855133;
 }
 
 #footer-upper ul {
@@ -171,7 +171,7 @@
 }
 
 #footer-upper li a i {
-  color: #d47d6b;
+  color: #855133;
 }
 
 #footer-lower {
@@ -214,7 +214,7 @@
 }
 
 .gallery-parent .btn-primary:hover, .gallery-parent #projects-section .nav-item .active:hover, #projects-section .nav-item .gallery-parent .active:hover {
-  background-color: #d47d6b;
+  background-color: #855133;
 }
 
 .working-hours {
